fix header navbar and adding gap in profile

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -633,6 +633,14 @@ video {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-y-4 {
   row-gap: 1rem;
 }
